@@ -1,6 +1,11 @@
 2006-06-18 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/GParted_Core.h,
+	  src/GParted_Core.cc: did more work on moving
+
+2006-06-18 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/GParted_Core.h,
 	  src/GParted_Core.cc,
 	  src/Win_GParted.cc: some more cleanups, should be finished now :)
 
